# beanhub-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.beanhub/: forms.yaml  inbox.yaml
.circleci/: config.yml
beanhub_cli/: aliase.py  api_helpers.py  auth.py  cli.py  config.py  context.py  encryption.py  environment.py  file_io.py  format.py  git_repo.py  http_client.py  import_cli.py  login.py  main.py  utils.py
beanhub_cli/connect/: cli.py  config.py  encryption.py  file_io.py  main.py
beanhub_cli/forms/: cli.py  main.py  validator.py
beanhub_cli/forms/app/: constants.py  deps.py  helpers.py  main.py  processor.py  routes.py  settings.py
beanhub_cli/forms/app/data/: sample_forms_doc.yaml
beanhub_cli/forms/app/static/js/: beanhub-web-react-0.1.5.js  beanhub-web-react-0.1.5.js.map  beanhub-web-react-0.1.6.js  beanhub-web-react-0.1.6.js.map  beanhub-web-react-0.3.0.js  beanhub-web-react-0.3.0.js.map
beanhub_cli/forms/app/templates/: errors.html  flash_messages.html  footer.html  form.html  home.html  layout.html
beanhub_cli/inbox/: cli.py  main.py
beanhub_cli/internal_api/: __init__.py  client.py  types.py
beanhub_cli/internal_api/api/auth/: create_auth_session.py  poll_auth_session.py
beanhub_cli/internal_api/api/connect/: create_dump_request.py  create_sync_batch.py  get_dump_request.py  get_sync_batch.py
beanhub_cli/internal_api/api/inbox/: create_inbox_dump_request.py  get_inbox_dump_request.py  get_inbox_emails.py
beanhub_cli/internal_api/api/repo/: list_repo.py
beanhub_cli/internal_api/models/: __init__.py  auth_session_not_ready_response.py  auth_session_poll_response.py  auth_session_request.py  auth_session_response.py  create_dump_request_request.py  create_dump_request_response.py  create_inbox_dump_request.py  create_inbox_dump_request_request.py  create_inbox_dump_request_response.py  create_sync_batch_request.py  create_sync_batch_response.py  dump_request_state.py  generic_error.py  get_dump_request_response.py  get_inbox_dump_request_response.py  get_inbox_email_response.py  get_sync_batch_response.py  http_validation_error.py  inbox_dump_request_state.py  inbox_email.py  inbox_email_headers.py  item_data.py  list_repositories_response.py  pagination.py  plaid_item_sync_state.py  repository.py  repository_type.py  sync_batch_state.py  sync_data.py  validation_error.py
beanhub_cli/mcp/: cli.py  main.py  schemes.py
beanhub_cli/mcp/app/: main.py  routes.py
data/: internal-api-config.yaml  internal-openapi.json
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
docs/docs/commands/: connect.md  form.md  format.md  import.md  login.md
docs/overrides/partials/integrations/analytics/: custom.html
scripts/: gen-internal-api.sh
tests/: conftest.py  factories.py  helper.py  test_format.py  test_git_repo.py  test_http_client.py  test_login.py  test_utils.py
tests/benchmark/: conftest.py  test_import_cli_benchmark.py
tests/connect/: test_dump.py  test_encryption.py  test_sync.py
tests/forms/: test_validator.py
tests/forms/app/: conftest.py  test_forms.py  types_def.py
tests/inbox/: test_dump.py
