[tool.poetry]
name = "beanhub-cli"
version = "1.2.3"
description = "Command line tools for BeanHub"
authors = ["Fang-Pen Lin <fangpen@launchplatform.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
bh = "beanhub_cli.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.0"
starlette-wtf = "^0.4.3"
fastapi = ">= 0.98.0, <1.0.0"
jinja2 = ">=3.1.2, <4.0.0"
pyyaml = "^6.0.1"
beancount-black = "^1.0.1"
click = "^8.1.7"
uvicorn = ">=0.23.2, <1.0.0"
beanhub-forms = "^0.1.3"
pydantic-settings = "^2.0.3"
rich = "^13.6.0"
beanhub-import = ">= 0.3.4, <1.0.0"
beanhub-extract = ">= 0.1.0, <1.0.0"
beancount-parser = ">= 1.2.3, <1.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
