[tool.poetry]
name = "beanhub-cli"
version = "2.1.1"
description = "Command line tools for BeanHub"
authors = ["Fang-Pen Lin <fangpen@launchplatform.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://beanhub-cli-docs.beanhub.io"

[tool.poetry.scripts]
bh = "beanhub_cli.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.0"
starlette-wtf = "^0.4.3"
fastapi = ">= 0.98.0, <1.0.0"
jinja2 = ">=3.1.2, <4.0.0"
pyyaml = "^6.0.1"
beancount-black = "^1.0.1"
click = "^8.1.7"
uvicorn = ">=0.23.2, <1.0.0"
beanhub-forms = "^0.1.3"
pydantic-settings = "^2.0.3"
rich = "^13.6.0"
beanhub-import = ">= 1.0.0, <2.0.0"
beanhub-extract = ">= 0.1.0, <1.0.0"
beancount-parser = ">= 1.2.3, <1.3.0"

httpx = { version = ">=0.20.0,<0.29.0", optional = true}
attrs = { version = ">=22.2.0", optional = true }
python-dateutil = { version = "^2.8.0", optional = true }
tomli = { version = "^2.2.1", optional = true }
tomli-w = { version = "^1.1.0", optional = true }
pynacl = { version = "^1.5.0", optional = true }
cryptography = { version = "^44.0.0", optional = true}

[tool.poetry.extras]
login = ["httpx", "attrs", "python-dateutil", "tomli", "tomli-w"]
connect = ["httpx", "attrs", "python-dateutil", "tomli", "tomli-w", "pynacl", "cryptography"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
httpx = "^0.28.0"
mkdocs-material = "^9.5.35"
openapi-python-client = "^0.23.0"
pytest-httpx = "^0.35.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
