[project]
name = "beanhub-cli"
version = "3.1.0"
description = "Command line tools for BeanHub and Beancount users"
authors = [{ name = "Fang-Pen Lin", email = "fangpen@launchplatform.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>=2.4.0,<3",
    "starlette-wtf>=0.4.3,<0.5",
    "fastapi>= 0.98.0, <1.0.0",
    "jinja2>=3.1.2, <4.0.0",
    "pyyaml>=6.0.1,<7",
    "beancount-black>=1.0.1,<2",
    "click>=8.1.7,<9",
    "uvicorn>=0.23.2, <1.0.0",
    "beanhub-forms>=0.1.3,<0.2",
    "pydantic-settings>=2.0.3,<3",
    "rich>=13.6.0,<14",
    "httpx>=0.20.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0,<3",
    "tomli>=2.2.1,<3",
    "tomli-w>=1.1.0,<2",
    "pynacl>=1.5.0,<2",
    "beanhub-import>= 1.0.0, <2.0.0",
    "beanhub-extract>= 0.1.0, <1.0.0",
    "beancount-parser>= 1.2.3, <1.3.0",
    "beanhub-inbox>=0.2.3,<0.3.0",
    "cryptography>=44.0.0",
    "fastapi-mcp>=0.3.7",
    "beancount-data>=3.0.2",
    "beancount-exporter>=3.0.0",
    "orjson>=3.11.0",
]

[project.urls]
Documentation = "https://beanhub-cli-docs.beanhub.io"

[project.scripts]
bh = "beanhub_cli.main:cli"
beanhub-cli = "beanhub_cli.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.21.1,<0.22",
    "pytest-mock>=3.11.1,<4",
    "httpx>=0.28.0,<0.29",
    "mkdocs-material>=9.5.35,<10",
    "openapi-python-client>=0.23.0,<0.24",
    "pytest-httpx>=0.35.0,<0.36",
    "pytest-factoryboy>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
